[gd_scene load_steps=13 format=3 uid="uid://3s12bhj4aj4o"]

[ext_resource type="Script" uid="uid://vsjkub5vkru" path="res://Scripts/foreground.gd" id="1_48xlc"]
[ext_resource type="Script" uid="uid://culraepq8v8dm" path="res://Scripts/main_menu.gd" id="1_ce3w2"]
[ext_resource type="Script" uid="uid://dbf78rxd62sqx" path="res://Scripts/character.gd" id="2_1ehe0"]
[ext_resource type="Texture2D" uid="uid://ddrd0x3egdgwk" path="res://Assets/background/background_layer_1.png" id="2_yhxw7"]
[ext_resource type="FontFile" uid="uid://df0jrxfyaj3ec" path="res://Assets/fonts/SuperPixel-m2L8j.ttf" id="3_1ehe0"]
[ext_resource type="Texture2D" uid="uid://dxj5ddjnl23j7" path="res://Assets/background/background_layer_2.png" id="3_trj04"]
[ext_resource type="Texture2D" uid="uid://cewmevvunoixa" path="res://Assets/background/main_menu.png" id="5_16hvj"]
[ext_resource type="FontFile" uid="uid://dtmohsg271ot4" path="res://Assets/fonts/RebellionSquad-ZpprZ.ttf" id="5_n45e2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n45e2"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.101961, 0.101961, 0.101961, 0)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_trj04"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.101960786, 0.101960786, 0.101960786, 0)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cp0ys"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.101961, 0.101961, 0.101961, 0)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yhxw7"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.225, 0.225, 0.225, 0.6)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ce3w2")

[node name="Node2D" type="Node2D" parent="."]
position = Vector2(593, 352)
scale = Vector2(4, 4.5)

[node name="Background" type="Sprite2D" parent="Node2D"]
texture = ExtResource("2_yhxw7")

[node name="Foreground" type="Sprite2D" parent="Node2D"]
texture = ExtResource("3_trj04")
script = ExtResource("1_48xlc")

[node name="Character" type="Sprite2D" parent="Node2D"]
texture = ExtResource("5_16hvj")
script = ExtResource("2_1ehe0")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 124.0
offset_top = -305.0
offset_right = 349.0
offset_bottom = -204.0
grow_vertical = 0

[node name="Start" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_1ehe0")
theme_override_styles/normal = SubResource("StyleBoxFlat_n45e2")
text = "START"

[node name="Reset" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_1ehe0")
theme_override_styles/normal = SubResource("StyleBoxFlat_trj04")
text = "RESET"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_1ehe0")
theme_override_styles/normal = SubResource("StyleBoxFlat_cp0ys")
theme_override_styles/hover = SubResource("StyleBoxFlat_yhxw7")
text = "QUIT"

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -466.0
offset_top = 236.0
offset_right = -189.0
offset_bottom = 298.0
grow_horizontal = 2

[node name="Label" type="Label" parent="CenterContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_n45e2")
theme_override_font_sizes/font_size = 50
text = "FARUNG"

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/Reset" to="." method="_on_reset_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
